fix: Mark AOT generation binaries executable

--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -112,6 +112,9 @@ jobs:
       # Workaround for https://github.com/dotnet/runtime/issues/44033
       cp ./artifacts/bin/ref/net6.0/System.Net.Quic.dll ./artifacts/bin/microsoft.netcore.app.runtime.browser-wasm/$(BUILD_CONFIGURATION)/runtimes/browser-wasm/lib/net6.0
 
+      # Mark AOT generation binaries executable
+      chmod +x ./artifacts/bin/microsoft.netcore.app.runtime.browser-wasm/$(BUILD_CONFIGURATION)/runtimes/browser-wasm/native/cross/*
+
     displayName: Build Wasm Runtime
 
   - bash: |
