--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -5,7 +5,7 @@ jobs:
     NUGET_PACKAGES: $(build.sourcesdirectory)/.nuget
     VersionCodeOffset: 400559 # last value for the APK release
     EMSDK_VERSION: 2.0.6
-    DOTNETRUNTIME_COMMIT: 38c9b98eb12a7cb976c77e89a070fa2803abc9df
+    DOTNETRUNTIME_COMMIT: 78adc93ff9fed8d8c92f02fa77dbc9089f4c906b
     LINKER_COMMIT: 93caeb4b18a229c686d8760d4a5710b4f323055d
 
   container: 
@@ -70,6 +70,7 @@ jobs:
       git reset --hard $(DOTNETRUNTIME_COMMIT)
       echo dotnet/runtime base SHA1: `git rev-parse HEAD`
       git apply $(Build.SourcesDirectory)/patches/enable-wasm-aot.patch
+      git apply $(Build.SourcesDirectory)/patches/enable-js-exception-trace.patch
       git config --global user.email "ci@platform.uno"
       git config --global user.name "Uno Platform CI"
       git add .
