fix: Preserve UnmanagedCallersOnlyAttribute

--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -4,7 +4,7 @@ jobs:
   variables:
     NUGET_PACKAGES: $(build.sourcesdirectory)/.nuget
     VersionCodeOffset: 400559 # last value for the APK release
-    EMSDK_VERSION: 2.0.6
+    EMSDK_VERSION: 2.0.9
     DOTNETRUNTIME_COMMIT: c6e5ef17d1e35800d7090872859cb408fe0f6e61
     LINKER_COMMIT: 93caeb4b18a229c686d8760d4a5710b4f323055d
 
@@ -71,6 +71,7 @@ jobs:
       echo dotnet/runtime base SHA1: `git rev-parse HEAD`
       git apply $(Build.SourcesDirectory)/patches/enable-wasm-aot.patch
       git apply $(Build.SourcesDirectory)/patches/enable-js-exception-trace.patch
+      git apply $(Build.SourcesDirectory)/patches/preserve-unmanagedcallersonlyattribute.patch
       git config --global user.email "ci@platform.uno"
       git config --global user.name "Uno Platform CI"
       git add .
