--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -74,6 +74,7 @@ jobs:
       git apply $(Build.SourcesDirectory)/patches/enable-wasm-aot.patch
       git apply $(Build.SourcesDirectory)/patches/enable-js-exception-trace.patch
       git apply $(Build.SourcesDirectory)/patches/enable-idbfs.patch
+      git apply $(Build.SourcesDirectory)/patches/bug48391.patch
       git config --global user.email "ci@platform.uno"
       git config --global user.name "Uno Platform CI"
       git add .
