ci: Enable ci on release/*

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -4,12 +4,13 @@ on:
   push:
     branches:
       - master
+      - release/*
       
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - master
-      
+      - release/*
 
 jobs:
 
