--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches:
       - master
-      - release/*
+      - release/**
       
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - master
-      - release/*
+      - release/**
 
 jobs:
 
