fix: Restore Wasm Generics SharedVT

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -104,6 +104,7 @@ jobs:
         git apply ../patches/enable-idbfs.patch
         git apply ../patches/pr50217.patch
         git apply ../patches/dbg-proxy-net5.patch
+        git apply ../patches/wasm-aot-generic-restore.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
