--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -101,6 +101,9 @@ jobs:
         $env:MonoEnableAssertMessages=true # enable emsdk assert messages
         cd runtime
         .\build.cmd -arch wasm -os Browser -subset mono+libs /p:RuntimeFlavor=Mono -c $env:BUILD_CONFIGURATION /p:CrossBuild=false /bl
+        
+        # Move cross compiler to appropriate location 
+        move .\artifacts\bin\mono\Browser.wasm.Release\cross .\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\runtimes\browser-wasm\native
 
         # Move src and include files to locations compatible with mono's packager
         cd .\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\runtimes\browser-wasm\native
@@ -257,7 +260,10 @@ jobs:
         ./build.sh -arch wasm -os Browser -c $BUILD_CONFIGURATION
 
         # Mark AOT generation binaries executable
-        chmod +x ./artifacts/bin/microsoft.netcore.app.runtime.browser-wasm/$BUILD_CONFIGURATION/runtimes/browser-wasm/native/cross/*
+        chmod +x ./artifacts/bin/mono/Browser.wasm.Release/cross/*
+
+        # Move cross compiler to appropriate location 
+        mv ./artifacts/bin/mono/Browser.wasm.Release/cross ./artifacts/bin/microsoft.netcore.app.runtime.browser-wasm/$BUILD_CONFIGURATION/runtimes/browser-wasm/native
 
         # Move src and include files to locations compatible with mono's packager
         cd ./artifacts/bin/microsoft.netcore.app.runtime.browser-wasm/$BUILD_CONFIGURATION/runtimes/browser-wasm/native
