--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -14,10 +14,10 @@ on:
             
 env:
   EMSDK_VERSION: 2.0.12 # align with https://github.com/dotnet/runtime/blob/4ae9b33cc5bd291abd18d5b4353adf780f6810bc/src/mono/wasm/emscripten-version.txt
-  DOTNETRUNTIME_COMMIT: be19e1cc6aad0f28e3bf1d7c7201c455a96b3a9d
+  DOTNETRUNTIME_COMMIT: 89313ca06932bdb69c53965ec1e37b67f920ee95
 
   # Original location: https://github.com/dotnet/runtime/blob/af2950f9833371c5749b88c7ed62d5189f384bbc/eng/Version.Details.xml#L203
-  LINKER_COMMIT: 17dd8b63f0f1752685575f920a3c3db00c51ecb9
+  LINKER_COMMIT: a621b9a630950026f5508c8089a59c0e825bd6e0
 
 jobs:
   ##
@@ -77,7 +77,7 @@ jobs:
 
         git apply ..\patches\enable-idbfs.patch
         git apply ..\patches\dbg-proxy-net5.patch
-        git apply ..\patches\Issue-52752.patch
+        git apply ..\patches\53391.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -231,7 +231,7 @@ jobs:
 
         git apply ../patches/enable-idbfs.patch
         git apply ../patches/dbg-proxy-net5.patch
-        git apply ../patches/Issue-52752.patch
+        git apply ../patches/53391.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -264,7 +264,7 @@ jobs:
         # Mark AOT generation binaries executable
         chmod +x ./artifacts/bin/mono/Browser.wasm.Release/cross/*
 
-        # Move cross compiler to appropriate location 
+        # Move cross compiler to appropriate location
         mv ./artifacts/bin/mono/Browser.wasm.Release/cross ./artifacts/bin/microsoft.netcore.app.runtime.browser-wasm/$BUILD_CONFIGURATION/runtimes/browser-wasm/native
 
         # Move src and include files to locations compatible with mono's packager
