ci: Fix dotnet/runtime clone long paths issue

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -63,7 +63,7 @@ jobs:
 
     - name: Clone dotnet/runtime
       run: |
-        git clone --recursive https://github.com/dotnet/runtime
+        git clone --recursive https://github.com/dotnet/runtime -c core.longpaths=true 
 
     - name: Apply Patches
       run: |
