--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -100,7 +100,7 @@ jobs:
       run: |
         $env:MonoEnableAssertMessages=true # enable emsdk assert messages
         cd runtime
-        .\build.cmd -ci -arch wasm -os Browser -subset mono+libs+pack /p:RuntimeFlavor=Mono -c $env:BUILD_CONFIGURATION /p:CrossBuild=false /bl
+        .\build.cmd -ci -arch wasm -os Browser -subset mono+libs+packs /p:RuntimeFlavor=Mono -c $env:BUILD_CONFIGURATION /p:CrossBuild=false /bl
         
         # Move cross compiler to appropriate location 
         move .\artifacts\bin\mono\Browser.wasm.Release\cross .\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\runtimes\browser-wasm\native
@@ -257,7 +257,7 @@ jobs:
         export EMSDK_PATH=$HOME/emsdk
         export MonoEnableAssertMessages=true # enable emsdk assert messages
         cd runtime
-        ./build.sh -ci -arch wasm -os Browser -c $BUILD_CONFIGURATION -subset mono+libs+pack
+        ./build.sh -ci -arch wasm -os Browser -c $BUILD_CONFIGURATION -subset mono+libs+packs
 
         # Mark AOT generation binaries executable
         chmod +x ./artifacts/bin/mono/Browser.wasm.Release/cross/*
