--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -75,13 +75,13 @@ jobs:
         echo dotnet/runtime base SHA1: $BASE_DOTNET_SHORT_COMMIT
         echo "BASE_DOTNET_SHORT_COMMIT=$BASE_DOTNET_SHORT_COMMIT" >> $env:GITHUB_ENV
 
-        # git apply ..\patches\enable-idbfs.patch
-        # git apply ..\patches\dbg-proxy-net5.patch
+        git apply ..\patches\enable-idbfs.patch
+        git apply ..\patches\dbg-proxy-net5.patch
         # git apply ..\patches\bug56309.patch
-        # git config --global user.email "ci@platform.uno"
-        # git config --global user.name "Uno Platform CI"
-        # git add .
-        # git commit -m "apply patches"
+        git config --global user.email "ci@platform.uno"
+        git config --global user.name "Uno Platform CI"
+        git add .
+        git commit -m "apply patches"
 
         Invoke-Expression "git rev-parse --short HEAD" | Out-String -NoNewLine -OutVariable PATCHED_DOTNET_SHORT_COMMIT
         echo dotnet/runtime patched SHA1: $PATCHED_DOTNET_SHORT_COMMIT
@@ -229,13 +229,13 @@ jobs:
         BASE_DOTNET_SHORT_COMMIT=`git rev-parse --short HEAD`
         echo "BASE_DOTNET_SHORT_COMMIT=$BASE_DOTNET_SHORT_COMMIT" >> $GITHUB_ENV
 
-        # git apply ../patches/enable-idbfs.patch
-        # git apply ../patches/dbg-proxy-net5.patch
+        git apply ../patches/enable-idbfs.patch
+        git apply ../patches/dbg-proxy-net5.patch
         # git apply ../patches/bug56309.patch
-        # git config --global user.email "ci@platform.uno"
-        # git config --global user.name "Uno Platform CI"
-        # git add .
-        # git commit -m "apply patches"
+        git config --global user.email "ci@platform.uno"
+        git config --global user.name "Uno Platform CI"
+        git add .
+        git commit -m "apply patches"
         echo dotnet/runtime patched SHA1: `git rev-parse HEAD`
 
     - name: Install cmake 3.16 
