fix: Adjust debugger status for interpreter-only

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -78,6 +78,7 @@ jobs:
         git apply ..\patches\enable-idbfs.patch
         git apply ..\patches\dbg-proxy-net5.patch
         git apply ..\patches\bug56309.patch
+        git apply ..\patches\debugger-condition.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -232,6 +233,7 @@ jobs:
         git apply ../patches/enable-idbfs.patch
         git apply ../patches/dbg-proxy-net5.patch
         git apply ../patches/bug56309.patch
+        git apply ../patches/debugger-condition.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
