--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -83,6 +83,7 @@ jobs:
         git apply ..\patches\fix-adjust-windows-build.patch
         git apply ..\patches\restore-jsinterop-invokejsunmarshalled.patch
         git apply ..\patches\fix-additional-emscripten-exports.patch
+        git apply ..\patches\enable-log-profiler.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -234,6 +235,7 @@ jobs:
         git apply ../patches/dbg-proxy-net5.patch
         git apply ../patches/restore-jsinterop-invokejsunmarshalled.patch
         git apply ../patches/fix-additional-emscripten-exports.patch
+        git apply ..\patches\enable-log-profiler.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
